2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-entry.c: (clutter_entry_set_property),
	(clutter_entry_get_property), (clutter_entry_ensure_layout),
	(clutter_entry_class_init), (clutter_entry_init),
	(clutter_entry_set_visibility), (clutter_entry_get_visibility),
	(clutter_entry_set_invisible_char),
	(clutter_entry_get_invisible_char):
	* clutter/clutter-entry.h:
	Added text-visibility, which will allow you to show all entered text
	as a nominated charaecter ('*' is default).

	* examples/test-entry.c: (main):

2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-entry.c: (clutter_entry_ensure_cursor_position),
	(clutter_entry_clear_cursor_position),
	(clutter_entry_paint_cursor), (clutter_entry_paint),
	(clutter_entry_class_init), (clutter_entry_set_text),
	(clutter_entry_set_position):
	* clutter/clutter-entry.h:
	Added a signla to track cursor movements.
	Moved the sursor painting function so it can be subclassed.

007-06-01  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_get_transformed_point):
	Make input again relative to the actor; feed depth into transform.
	
2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-entry.c: (clutter_entry_class_init),
	(clutter_entry_set_text):
	* clutter/clutter-entry.h:
	* examples/test-entry.c: (on_entry_text_changed), (main):
	Added a text-changed signal to the entry.

2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-effect.h:
	Removed extra G_END_DECLS outside the #endif

	* clutter/clutter-entry.c: (clutter_entry_handle_key_event),
	(clutter_entry_add):
	* clutter/clutter-entry.h:
	* examples/test-entry.c: (on_key_release_cb):
	Added a function to deal with ClutterKeyEvents. Handles the majority
	of entry-related keyboard keys. However modifiers still need to be
	implemented.

2007-06-01  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	(mtx_create):
	Apply perspective transform before all other transforms.
	